Fixed the stupid overflow issue with the lesson cards on the course show page

--- a/client/main.scss
+++ b/client/main.scss
@@ -558,13 +558,9 @@ div.edit {
     margin: 1em 0;
     list-style: none;
     padding: 0;
-    & > li {
-        float: left;
-    }
+    overflow: hidden;
     li {
         float: left;
-        // float: left;
-        clear: both;
         font-size: 1.25em;
         text-decoration: none;
         margin: 1em 0;
@@ -578,7 +574,7 @@ div.edit {
         div {
             padding: 2em 0;
             color: white;
-            transition: .25s ease-in-out;
+            transition: transform .25s ease-in-out;
             &:hover {
                 @include transform(scale(1.05));
             }
@@ -591,8 +587,6 @@ div.edit {
     }
     lesson-card{
         display: inline-block;
-        clear: both;
-        float: none;
         li {
             width: 100%;
             padding: 0;
